--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,10 @@
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
 
 @media (min-width: 576px) {
