--- a/src/components/SecretBtn/SecretBtn.module.css
+++ b/src/components/SecretBtn/SecretBtn.module.css
@@ -47,8 +47,8 @@
       rgba(251, 7, 217, 1) 90%,
       rgba(255, 0, 0, 1) 100%
     )
-    0 0/100% 200% !important;
-
+    0 0/200% 200% !important;
+  animation: coverAnimation 1s linear infinite;
   transform: translateX(-30px);
   transition: transform 250ms linear;
 }
@@ -113,7 +113,7 @@
 @media (min-width: 1200px) {
 }
 
-@keyframes a {
+@keyframes coverAnimation {
   to {
     background-position: 0 -200%;
   }
