--- a/src/components/Buttons/Button/Button.module.css
+++ b/src/components/Buttons/Button/Button.module.css
@@ -37,14 +37,20 @@
 .front {
   display: block;
   position: relative;
-  padding: 12px 42px;
-  border-radius: 12px;
+  /* padding: 12px 42px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: 47px;
+  width:160px; */
+  border-radius: 6px;
   font-size: 1.25rem;
   color: white;
   background: hsl(27, 100%, 47%);
   will-change: transform;
   transform: translateY(-4px);
   transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+  user-select: none;
 }
 .pushable:hover {
   filter: brightness(110%);
