--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap");
 
-body {
+html {
+  width: 100vw;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -21,7 +27,6 @@ h4,
 h5 {
   margin: 0;
 }
-
 
 /* ===========================
 @media (min-width: 576px) {
