--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,14 +1,13 @@
 .container {
-  width: 80%;
+  /* width: 80%;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-
-
-  height: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 @media (min-width: 576px) {
