--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap");
 html {
   width: 100vw;
   overflow-x: hidden;
   overflow-y: hidden;
-}
-
-/* body {
+ 
+} /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
